// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > Snapshots > matches default snapshot 1`] = `
<label
  class="label"
  data-testid="label"
>
  Test content
</label>
`;

exports[`Label > Snapshots > matches disabled state snapshot 1`] = `
<label
  class="label"
  data-testid="label"
  disabled=""
>
  Test content
</label>
`;
